objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>L2O_Lead_source_detail__c</fullName>
        <description>Additional information about where the Lead came from</description>
        <label>Lead Source Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Email - Inbound</fullName>
                </value>
                <value>
                    <fullName>Email - Outbound</fullName>
                </value>
                <value>
                    <fullName>Event / Tradeshow</fullName>
                </value>
                <value>
                    <fullName>Paid Advertising (includes Social)</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Telemarketing</fullName>
                </value>
                <value>
                    <fullName>Third Party Acquired (Includes Partner)</fullName>
                </value>
                <value>
                    <fullName>Web Form</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Hosted Event</fullName>
                </value>
                <value>
                    <fullName>Nurture</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
                <value>
                    <fullName>Benefit Consultant</fullName>
                </value>
                <value>
                    <fullName>Referral Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Legacy_ARR_Weighted__c</fullName>
        <description>Used for Data Migration</description>
        <label>Legacy ARR Weighted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Legacy_ARR__c</fullName>
        <description>Used for Data Migration</description>
        <label>Legacy ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Booking_INTL__c</fullName>
        <description>Used for Data Migration</description>
        <label>Legacy Booking (INTL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Bookings__c</fullName>
        <description>Used for Data Migration</description>
        <label>Legacy Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Data Migration</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Lessor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lessor Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.L2O_Account_Type__c</field>
                <operation>equals</operation>
                <value>Lessor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Lessor Account)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Loss_Reason_Detail__c</fullName>
        <label>Loss Reason Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>L2O_Loss_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>Too Expensive</fullName>
                </value>
                <value>
                    <fullName>Client did not agree with ROI</fullName>
                </value>
                <value>
                    <fullName>Product Functionality</fullName>
                </value>
                <value>
                    <fullName>Integration / Service Delivery</fullName>
                </value>
                <value>
                    <fullName>Regulatory</fullName>
                </value>
                <value>
                    <fullName>At RFP</fullName>
                </value>
                <value>
                    <fullName>Competitor-Product/Services</fullName>
                </value>
                <value>
                    <fullName>Competitor-Pricing</fullName>
                </value>
                <value>
                    <fullName>Competitor-Details Unknown</fullName>
                </value>
                <value>
                    <fullName>Not Qualified Opportunity-Lead Generation</fullName>
                </value>
                <value>
                    <fullName>Not Qualified Opportunity-SalesRep Turnover</fullName>
                </value>
                <value>
                    <fullName>Not Qualified Opportunity-Not Strategic fit</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Client Turnover-Decision Maker Change</fullName>
                </value>
                <value>
                    <fullName>Internal -Contract Path Change</fullName>
                </value>
                <value>
                    <fullName>Internal-Duplicate</fullName>
                </value>
                <value>
                    <fullName>No Decision / Unresponsive</fullName>
                </value>
                <value>
                    <fullName>Terminated Contracting Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Product/Services</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Microsoft_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates Microsoft involvement. Field can be set manually but is also to be part of the lead conversion process.</description>
        <inlineHelpText>Check to indicate Microsoft involvement.</inlineHelpText>
        <label>Microsoft Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Net_ARR__c</fullName>
        <description>Net annual recurring revenue.</description>
        <formula>SBQQ__PrimaryQuote__r.L2O_Net_ARR__c +  L2O_Prior_Net_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Net_ARR_w_PG__c</fullName>
        <formula>SBQQ__PrimaryQuote__r.L2O_Net_ARR_With_PG__c +  L2O_Prior_Net_ARR_w_PG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net ARR w/ PG</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_ORG_Link__c</fullName>
        <description>TBD</description>
        <formula>LEFT($Api.Partner_Server_URL_540, FIND(&quot;.com/&quot;,$Api.Partner_Server_URL_540)+4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>L2O_ORG_Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Opp_Guid__c</fullName>
        <description>System Generated Global Unique Id</description>
        <inlineHelpText>System Generated Global UniqueId</inlineHelpText>
        <label>Opportunity Guid</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Opportunity_Closed_By__c</fullName>
        <description>When was the Opportunity closed by</description>
        <label>Opportunity Closed By</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Opportunity_Closed_Date__c</fullName>
        <description>Date the SE closed won/lost the Opportunity</description>
        <label>Opportunity Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Opportunity_Number__c</fullName>
        <displayFormat>OPP-{0000000}</displayFormat>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>L2O_Originated_As_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Did this Account get converted from a Lead</description>
        <label>Originated As Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_PO_Number__c</fullName>
        <label>PO Number</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up to related Account</description>
        <label>Parent Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.L2O_Contract_Path__c</field>
                <operation>equals</operation>
                <valueField>$Source.L2O_Contract_Path__c</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.L2O_Contracting_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.L2O_Subtype__c</field>
                <operation>equals</operation>
                <value>Hunting License</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.L2O_Client_Line_of_Business__c</field>
                <operation>equals</operation>
                <valueField>$Source.L2O_Client_Line_of_Business__c</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.L2O_Pricing_Model__c</field>
                <operation>equals</operation>
                <valueField>$Source.L2O_Pricing_Model__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Payment_Term__c</fullName>
        <description>Numerical Value for payment plan</description>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Performance_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Policy_Type__c</fullName>
        <label>Policy Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Life insurance</fullName>
                </value>
                <value>
                    <fullName>Health Insurance</fullName>
                </value>
                <value>
                    <fullName>Death insurance</fullName>
                </value>
                <value>
                    <fullName>General Insurance</fullName>
                </value>
                <value>
                    <fullName>Travel insurance</fullName>
                </value>
                <value>
                    <fullName>Benefit program</fullName>
                </value>
                <value>
                    <fullName>Sport Insurance</fullName>
                </value>
                <value>
                    <fullName>Card Insurance</fullName>
                </value>
                <value>
                    <fullName>Car Insurance</fullName>
                </value>
                <value>
                    <fullName>Dental Insurance</fullName>
                </value>
                <value>
                    <fullName>Home Insurance</fullName>
                </value>
                <value>
                    <fullName>Labor Insurance</fullName>
                </value>
                <value>
                    <fullName>Life and Health Insurance</fullName>
                </value>
                <value>
                    <fullName>Personal Insurance</fullName>
                </value>
                <value>
                    <fullName>In Touch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Pricing_Model__c</fullName>
        <description>The type of pricing per contracted Account</description>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>L2O_Contract_Path__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>L2O_Pricing_Model</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Prior_ARR_value__c</fullName>
        <label>Prior ARR value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_Bookings_Total_Value__c</fullName>
        <label>Prior Bookings Total Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_Est_First_Year_Revenue__c</fullName>
        <label>Prior Est First Year Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_Est_In_Year_Revenue__c</fullName>
        <label>Prior Est. In Year Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_Est_One_Time_Revenue__c</fullName>
        <label>Prior Est. One Time Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_Net_ARR__c</fullName>
        <label>Prior Net ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_Net_ARR_w_PG__c</fullName>
        <label>Prior Net ARR w/ PG</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Prior_TCV_Value__c</fullName>
        <label>Prior TCV Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Product_Count__c</fullName>
        <label>Product Count</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2O_Profile_New_Quote_Available__c</fullName>
        <description>Helper field to drive visibility of quote creation</description>
        <formula>IF(($Profile.Name ==&apos;System Administrator&apos; || $Profile.Name ==&apos;Client Success&apos; || $Profile.Name ==&apos;Sales&apos; || $Profile.Name ==&apos;System Administrator - Developer&apos; || $Profile.Name ==&apos;Sales Ops&apos; || $Profile.Name ==&apos;International Sales&apos; || $Profile.Name  ==&apos;Contract / Legal&apos; ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profile_New_Quote_Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Program_Term__c</fullName>
        <description>Used for Data Migration</description>
        <label>Program Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Purchase_or_Rental__c</fullName>
        <description>Sales Type</description>
        <label>Purchase or Rental</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Purchase - End Point</fullName>
                </value>
                <value>
                    <fullName>Purchase - Ancillary</fullName>
                </value>
                <value>
                    <fullName>VORS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Referencing_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referencing Client</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Referencing Client)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Referral_Notes__c</fullName>
        <label>Referral Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Referral_Tier__c</fullName>
        <label>Referral Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Referral_Tier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox should be marked to &quot;True&quot; if someone referred the Account the Opportunity is related to</description>
        <label>Referral?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Request_CIM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only check box if Client Implementation Manager (CIM) is needed prior to Closed Won.  If CIM is not needed earlier than Closed Won, CIM request will automatically trigger at Closed Won.</inlineHelpText>
        <label>Request CIM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2O_Reseller_Total_Book_of_Business__c</fullName>
        <label>Reseller Total Book of Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Revenue_Effective_Date__c</fullName>
        <description>Field used to track when revenue can be obtained from the customer</description>
        <label>Revenue Effective Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_SFDC_Opp_ID__c</fullName>
        <description>TBD</description>
        <label>SFDC Opp ID</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Sales_Channel__c</fullName>
        <description>Used for reporting</description>
        <label>Sales Channel</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Sales_Order_Date__c</fullName>
        <description>Date of Sale</description>
        <label>Sales Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Sales_Order_Num__c</fullName>
        <description>Opportunity Sale number</description>
        <label>Sales Order Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Sales_Order_Type__c</fullName>
        <description>What type of Sale is on the Opportunity</description>
        <label>Sales Order Type</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Sales_Type__c</fullName>
        <description>Type of Sale</description>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Service_Contract_Code__c</fullName>
        <label>Service Contract Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Ship_Date__c</fullName>
        <description>Date Products related to the Opportunity will ship</description>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Ship_to_City__c</fullName>
        <description>City referenced from Account Address</description>
        <label>Ship to City</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Ship_to_Country__c</fullName>
        <description>Country referenced from Account Address</description>
        <label>Ship to Country</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Ship_to_State__c</fullName>
        <description>State referenced from Account Address</description>
        <label>Ship to State</label>
        <length>108</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Start_Date__c</fullName>
        <description>Date the Opportunity started</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2O_Sub_Channel_Segment__c</fullName>
        <description>Used to align an Opportunity to a specific channel</description>
        <label>Subchannel Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>L2O_Channel_Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>B2C</fullName>
                </value>
                <value>
                    <fullName>B2H</fullName>
                </value>
                <value>
                    <fullName>Blues</fullName>
                </value>
                <value>
                    <fullName>Downmarket</fullName>
                </value>
                <value>
                    <fullName>DTE - Client Management</fullName>
                </value>
                <value>
                    <fullName>East Client Sales</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Hospital &amp; Health System (HHS)</fullName>
                </value>
                <value>
                    <fullName>HSG</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnerships</fullName>
                </value>
                <value>
                    <fullName>United</fullName>
                </value>
                <value>
                    <fullName>West Client Sales</fullName>
                </value>
                <value>
                    <fullName>Net New</fullName>
                </value>
                <value>
                    <fullName>UHC Employees</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>TPA/Reseller</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>East Net New Sales</fullName>
                </value>
                <value>
                    <fullName>Signature</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>West Net New Sales</fullName>
                </value>
                <value>
                    <fullName>Government Federal Agencies</fullName>
                </value>
                <value>
                    <fullName>&lt;No sub-type&gt;</fullName>
                    <isActive>false</isActive>
                    <label>&lt;No sub-type&gt;</label>
                </value>
                <value>
                    <fullName>East Existing Sales</fullName>
                    <isActive>false</isActive>
                    <label>East Existing Sales</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Sub_Type_Detail__c</fullName>
        <label>Sub-Type Detail</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add-On Membership</fullName>
                </value>
                <value>
                    <fullName>Price Increase</fullName>
                </value>
                <value>
                    <fullName>Upgrade/Upsell</fullName>
                </value>
                <value>
                    <fullName>Price Increase + Upgrade/Upsell</fullName>
                </value>
                <value>
                    <fullName>Price Decrease</fullName>
                </value>
                <value>
                    <fullName>Reporting Purposes Only</fullName>
                </value>
                <value>
                    <fullName>Delayed Launch</fullName>
                </value>
                <value>
                    <fullName>Did Not Launch</fullName>
                </value>
                <value>
                    <fullName>Multi-Year Subscription Increase</fullName>
                </value>
                <value>
                    <fullName>Multi-Year Visit Fee Increase</fullName>
                </value>
                <value>
                    <fullName>Visit Fee Increase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Subtype__c</fullName>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Sale</fullName>
                </value>
                <value>
                    <fullName>Hunting License</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Pilot to Paid Conversion</fullName>
                </value>
                <value>
                    <fullName>Attrition / Expiry</fullName>
                </value>
                <value>
                    <fullName>Pilot Extension</fullName>
                </value>
                <value>
                    <fullName>Contract Path Change</fullName>
                </value>
                <value>
                    <fullName>Expansion</fullName>
                    <isActive>false</isActive>
                    <label>Expansion</label>
                </value>
                <value>
                    <fullName>Expansion / Add-On</fullName>
                    <isActive>false</isActive>
                    <label>Expansion / Add-On</label>
                </value>
                <value>
                    <fullName>Initial Sale - Direct</fullName>
                    <isActive>false</isActive>
                    <label>Initial Sale - Direct</label>
                </value>
                <value>
                    <fullName>New Population</fullName>
                    <isActive>false</isActive>
                    <label>New Population</label>
                </value>
                <value>
                    <fullName>Recontracting</fullName>
                    <isActive>false</isActive>
                    <label>Recontracting</label>
                </value>
                <value>
                    <fullName>Renewal + Expansion</fullName>
                    <isActive>false</isActive>
                    <label>Renewal + Expansion</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_TCV__c</fullName>
        <description>Total Contract Value</description>
        <formula>L2O_Prior_TCV_Value__c + SBQQ__PrimaryQuote__r.L2O_TCV_USGH__c +   SBQQ__PrimaryQuote__r.L2O_TCV_HHS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Term_Calculation__c</fullName>
        <formula>IF(SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c &gt; 0,SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c,IF( SBQQ__AmendedContract__r.ContractTerm  &gt; 0,SBQQ__AmendedContract__r.ContractTerm,SBQQ__RenewedContract__r.ContractTerm))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term Calculation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Term__c</fullName>
        <description>&quot;Rental: Length of rental, in months. Purchases: Enter length, in months, of longest recurring element. If no recurring elements, enter 1.&quot;</description>
        <inlineHelpText>***Rental: Length of rental, in months. 
        ***Purchases: Enter length, in months, of longest recurring element. If no recurring elements, enter 1.</inlineHelpText>
        <label>Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Use_Case_Other__c</fullName>
        <description>Describes any additional use case for this Opportunity</description>
        <label>Use Case (Other)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>L2O_Use_Case_Primary__c</fullName>
        <description>Describes the primary use case for this Opportunity</description>
        <label>Use Case (Primary)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Clinical_Interests</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2O_Use_Case_Secondary__c</fullName>
        <description>Describes the secondary use case Opportunity</description>
        <label>Use Case (Secondary)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2O_Clinical_Interests</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>